// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`VDataTable.vue should match a snapshot - no data 1`] = `

<div>
  <div class="table__overflow">
    <table class="datatable table">
      <thead>
        <tr>
          <th role="columnheader"
              scope="col"
              aria-label="First Column: Sorted ascending. Activate to sort descending."
              aria-sort="ascending"
              tabindex="0"
              class="column sortable active asc text-xs-left a-string"
          >
            First Column
            <i aria-hidden="true"
               class="icon material-icons"
               style="font-size: 16px;"
            >
              arrow_upward
            </i>
          </th>
          <th role="columnheader"
              scope="col"
              aria-label="Second Column: Not sorted."
              aria-sort="none"
              class="column text-xs-left"
          >
            Second Column
          </th>
          <th role="columnheader"
              scope="col"
              aria-label="Third Column: Not sorted. Activate to sort ascending."
              aria-sort="none"
              tabindex="0"
              class="column sortable text-xs-left an array"
          >
            Third Column
            <i aria-hidden="true"
               class="icon material-icons"
               style="font-size: 16px;"
            >
              arrow_upward
            </i>
          </th>
        </tr>
        <tr class="datatable__progress">
          <th colspan="3"
              class="column"
          >
          </th>
        </tr>
      </thead>
      <tbody>
        <tr>
          <td colspan="3"
              class="text-xs-center"
          >
            No data available
          </td>
        </tr>
      </tbody>
    </table>
  </div>
  <div class="datatable table">
    <div class="datatable__actions">
      <div class="datatable__actions__select">
        Rows per page:
        <div tabindex="0"
             data-uid="13"
             aria-label="Rows per page:"
             role="combobox"
             class="input-group input-group--append-icon input-group--hide-details input-group--text-field input-group--select input-group--auto primary--text"
        >
          <div class="input-group__input">
            <div class="input-group__selections"
                 style="overflow: hidden;"
            >
              <input aria-label="Rows per page:"
                     disabled="disabled"
                     tabindex="-1"
                     class="input-group--select__autocomplete"
                     style="display: none;"
              >
            </div>
            <div class="menu"
                 style="display: inline-block;"
            >
              <div class="menu__content menu__content--select menu__content--auto"
                   style="max-height: 200px; min-width: 75px; max-width: auto; top: 18px; left: 12px; z-index: 0; display: none;"
              >
                <div class="card"
                     style="height: auto;"
                >
                  <ul class="list">
                    <li>
                      <a class="list__tile list__tile--link">
                        <div class="list__tile__content">
                          <div class="list__tile__title">
                            5
                          </div>
                        </div>
                      </a>
                    </li>
                    <li>
                      <a class="list__tile list__tile--link">
                        <div class="list__tile__content">
                          <div class="list__tile__title">
                            10
                          </div>
                        </div>
                      </a>
                    </li>
                    <li>
                      <a class="list__tile list__tile--link">
                        <div class="list__tile__content">
                          <div class="list__tile__title">
                            25
                          </div>
                        </div>
                      </a>
                    </li>
                    <li>
                      <a class="list__tile list__tile--link">
                        <div class="list__tile__content">
                          <div class="list__tile__title">
                            All
                          </div>
                        </div>
                      </a>
                    </li>
                  </ul>
                </div>
              </div>
            </div>
            <i aria-hidden="true"
               class="icon material-icons input-group__append-icon input-group__icon-cb"
            >
              arrow_drop_down
            </i>
          </div>
          <div class="input-group__details">
          </div>
        </div>
      </div>
      <div class="datatable__actions__range-controls">
        <div class="datatable__actions__pagination">
          –
        </div>
        <button disabled="disabled"
                type="button"
                class="btn btn--disabled btn--flat btn--icon"
                aria-label="Previous page"
        >
          <div class="btn__content">
            <i aria-hidden="true"
               class="icon material-icons"
            >
              chevron_left
            </i>
          </div>
        </button>
        <button disabled="disabled"
                type="button"
                class="btn btn--disabled btn--flat btn--icon"
                aria-label="Next page"
        >
          <div class="btn__content">
            <i aria-hidden="true"
               class="icon material-icons"
            >
              chevron_right
            </i>
          </div>
        </button>
      </div>
    </div>
  </div>
</div>

`;

exports[`VDataTable.vue should match a snapshot - no matching results 1`] = `

<div>
  <div class="table__overflow">
    <table class="datatable table">
      <thead>
        <tr>
          <th role="columnheader"
              scope="col"
              aria-label="First Column: Sorted ascending. Activate to sort descending."
              aria-sort="ascending"
              tabindex="0"
              class="column sortable active asc text-xs-left a-string"
          >
            First Column
            <i aria-hidden="true"
               class="icon material-icons"
               style="font-size: 16px;"
            >
              arrow_upward
            </i>
          </th>
          <th role="columnheader"
              scope="col"
              aria-label="Second Column: Not sorted."
              aria-sort="none"
              class="column text-xs-left"
          >
            Second Column
          </th>
          <th role="columnheader"
              scope="col"
              aria-label="Third Column: Not sorted. Activate to sort ascending."
              aria-sort="none"
              tabindex="0"
              class="column sortable text-xs-left an array"
          >
            Third Column
            <i aria-hidden="true"
               class="icon material-icons"
               style="font-size: 16px;"
            >
              arrow_upward
            </i>
          </th>
        </tr>
        <tr class="datatable__progress">
          <th colspan="3"
              class="column"
          >
          </th>
        </tr>
      </thead>
      <tbody>
        <tr>
          <td colspan="3"
              class="text-xs-center"
          >
            No matching records found
          </td>
        </tr>
      </tbody>
    </table>
  </div>
  <div class="datatable table">
    <div class="datatable__actions">
      <div class="datatable__actions__select">
        Rows per page:
        <div tabindex="0"
             data-uid="1"
             aria-label="Rows per page:"
             role="combobox"
             class="input-group input-group--append-icon input-group--hide-details input-group--text-field input-group--select input-group--auto primary--text"
        >
          <div class="input-group__input">
            <div class="input-group__selections"
                 style="overflow: hidden;"
            >
              <input aria-label="Rows per page:"
                     disabled="disabled"
                     tabindex="-1"
                     class="input-group--select__autocomplete"
                     style="display: none;"
              >
            </div>
            <div class="menu"
                 style="display: inline-block;"
            >
              <div class="menu__content menu__content--select menu__content--auto"
                   style="max-height: 200px; min-width: 75px; max-width: auto; top: 18px; left: 12px; z-index: 0; display: none;"
              >
                <div class="card"
                     style="height: auto;"
                >
                  <ul class="list">
                    <li>
                      <a class="list__tile list__tile--link">
                        <div class="list__tile__content">
                          <div class="list__tile__title">
                            5
                          </div>
                        </div>
                      </a>
                    </li>
                    <li>
                      <a class="list__tile list__tile--link">
                        <div class="list__tile__content">
                          <div class="list__tile__title">
                            10
                          </div>
                        </div>
                      </a>
                    </li>
                    <li>
                      <a class="list__tile list__tile--link">
                        <div class="list__tile__content">
                          <div class="list__tile__title">
                            25
                          </div>
                        </div>
                      </a>
                    </li>
                    <li>
                      <a class="list__tile list__tile--link">
                        <div class="list__tile__content">
                          <div class="list__tile__title">
                            All
                          </div>
                        </div>
                      </a>
                    </li>
                  </ul>
                </div>
              </div>
            </div>
            <i aria-hidden="true"
               class="icon material-icons input-group__append-icon input-group__icon-cb"
            >
              arrow_drop_down
            </i>
          </div>
          <div class="input-group__details">
          </div>
        </div>
      </div>
      <div class="datatable__actions__range-controls">
        <div class="datatable__actions__pagination">
          –
        </div>
        <button disabled="disabled"
                type="button"
                class="btn btn--disabled btn--flat btn--icon"
                aria-label="Previous page"
        >
          <div class="btn__content">
            <i aria-hidden="true"
               class="icon material-icons"
            >
              chevron_left
            </i>
          </div>
        </button>
        <button disabled="disabled"
                type="button"
                class="btn btn--disabled btn--flat btn--icon"
                aria-label="Next page"
        >
          <div class="btn__content">
            <i aria-hidden="true"
               class="icon material-icons"
            >
              chevron_right
            </i>
          </div>
        </button>
      </div>
    </div>
  </div>
</div>

`;

exports[`VDataTable.vue should match a snapshot - with data 1`] = `

<div>
  <div class="table__overflow">
    <table class="datatable table">
      <thead>
        <tr>
          <th role="columnheader"
              scope="col"
              aria-label="First Column: Sorted ascending. Activate to sort descending."
              aria-sort="ascending"
              tabindex="0"
              class="column sortable active asc text-xs-left a-string"
          >
            First Column
            <i aria-hidden="true"
               class="icon material-icons"
               style="font-size: 16px;"
            >
              arrow_upward
            </i>
          </th>
          <th role="columnheader"
              scope="col"
              aria-label="Second Column: Not sorted."
              aria-sort="none"
              class="column text-xs-left"
          >
            Second Column
          </th>
          <th role="columnheader"
              scope="col"
              aria-label="Third Column: Not sorted. Activate to sort ascending."
              aria-sort="none"
              tabindex="0"
              class="column sortable text-xs-left an array"
          >
            Third Column
            <i aria-hidden="true"
               class="icon material-icons"
               style="font-size: 16px;"
            >
              arrow_upward
            </i>
          </th>
        </tr>
        <tr class="datatable__progress">
          <th colspan="3"
              class="column"
          >
          </th>
        </tr>
      </thead>
      <tbody>
        <td>
          b
        </td>
        <td>
          c
        </td>
        <td>
          a
        </td>
      </tbody>
    </table>
  </div>
  <div class="datatable table">
    <div class="datatable__actions">
      <div class="datatable__actions__select">
        Rows per page:
        <div tabindex="0"
             data-uid="27"
             aria-label="Rows per page:"
             role="combobox"
             class="input-group input-group--append-icon input-group--hide-details input-group--text-field input-group--select input-group--auto primary--text"
        >
          <div class="input-group__input">
            <div class="input-group__selections"
                 style="overflow: hidden;"
            >
              <input aria-label="Rows per page:"
                     disabled="disabled"
                     tabindex="-1"
                     class="input-group--select__autocomplete"
                     style="display: none;"
              >
            </div>
            <div class="menu"
                 style="display: inline-block;"
            >
              <div class="menu__content menu__content--select menu__content--auto"
                   style="max-height: 200px; min-width: 75px; max-width: auto; top: 18px; left: 12px; z-index: 0; display: none;"
              >
                <div class="card"
                     style="height: auto;"
                >
                  <ul class="list">
                    <li>
                      <a class="list__tile list__tile--link">
                        <div class="list__tile__content">
                          <div class="list__tile__title">
                            5
                          </div>
                        </div>
                      </a>
                    </li>
                    <li>
                      <a class="list__tile list__tile--link">
                        <div class="list__tile__content">
                          <div class="list__tile__title">
                            10
                          </div>
                        </div>
                      </a>
                    </li>
                    <li>
                      <a class="list__tile list__tile--link">
                        <div class="list__tile__content">
                          <div class="list__tile__title">
                            25
                          </div>
                        </div>
                      </a>
                    </li>
                    <li>
                      <a class="list__tile list__tile--link">
                        <div class="list__tile__content">
                          <div class="list__tile__title">
                            All
                          </div>
                        </div>
                      </a>
                    </li>
                  </ul>
                </div>
              </div>
            </div>
            <i aria-hidden="true"
               class="icon material-icons input-group__append-icon input-group__icon-cb"
            >
              arrow_drop_down
            </i>
          </div>
          <div class="input-group__details">
          </div>
        </div>
      </div>
      <div class="datatable__actions__range-controls">
        <div class="datatable__actions__pagination">
          1-3 of 3
        </div>
        <button disabled="disabled"
                type="button"
                class="btn btn--disabled btn--flat btn--icon"
                aria-label="Previous page"
        >
          <div class="btn__content">
            <i aria-hidden="true"
               class="icon material-icons"
            >
              chevron_left
            </i>
          </div>
        </button>
        <button disabled="disabled"
                type="button"
                class="btn btn--disabled btn--flat btn--icon"
                aria-label="Next page"
        >
          <div class="btn__content">
            <i aria-hidden="true"
               class="icon material-icons"
            >
              chevron_right
            </i>
          </div>
        </button>
      </div>
    </div>
  </div>
</div>

`;

exports[`VDataTable.vue should match a snapshot with single rows-per-page-items 1`] = `

<div>
  <div class="table__overflow">
    <table class="datatable table">
      <thead>
        <tr>
          <th role="columnheader"
              scope="col"
              aria-label="First Column: Sorted ascending. Activate to sort descending."
              aria-sort="ascending"
              tabindex="0"
              class="column sortable active asc text-xs-left a-string"
          >
            First Column
            <i aria-hidden="true"
               class="icon material-icons"
               style="font-size: 16px;"
            >
              arrow_upward
            </i>
          </th>
          <th role="columnheader"
              scope="col"
              aria-label="Second Column: Not sorted."
              aria-sort="none"
              class="column text-xs-left"
          >
            Second Column
          </th>
          <th role="columnheader"
              scope="col"
              aria-label="Third Column: Not sorted. Activate to sort ascending."
              aria-sort="none"
              tabindex="0"
              class="column sortable text-xs-left an array"
          >
            Third Column
            <i aria-hidden="true"
               class="icon material-icons"
               style="font-size: 16px;"
            >
              arrow_upward
            </i>
          </th>
        </tr>
        <tr class="datatable__progress">
          <th colspan="3"
              class="column"
          >
          </th>
        </tr>
      </thead>
      <tbody>
      </tbody>
    </table>
  </div>
  <div class="datatable table">
    <div class="datatable__actions">
      <div class="datatable__actions__range-controls">
        <div class="datatable__actions__pagination">
          1-1 of 3
        </div>
        <button disabled="disabled"
                type="button"
                class="btn btn--disabled btn--flat btn--icon"
                aria-label="Previous page"
        >
          <div class="btn__content">
            <i aria-hidden="true"
               class="icon material-icons"
            >
              chevron_left
            </i>
          </div>
        </button>
        <button type="button"
                class="btn btn--flat btn--icon"
                aria-label="Next page"
        >
          <div class="btn__content">
            <i aria-hidden="true"
               class="icon material-icons"
            >
              chevron_right
            </i>
          </div>
        </button>
      </div>
    </div>
  </div>
</div>

`;

exports[`VDataTable.vue should match display no-data-text when no data 1`] = `

<td colspan="3"
    class="text-xs-center"
>
  foo
</td>

`;

exports[`VDataTable.vue should match display no-results-text when no results 1`] = `

<td colspan="3"
    class="text-xs-center"
>
  bar
</td>

`;
